--- a/meta-cedi/conf/distro/cedi.conf
+++ b/meta-cedi/conf/distro/cedi.conf
@@ -35,3 +35,6 @@ VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_login_manager = "shadow-base"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
+
+# Add Cedi sanity bbclass.
+INHERIT += "cedi-sanity"
