--- a/meta-cedi/conf/local.conf.sample
+++ b/meta-cedi/conf/local.conf.sample
@@ -68,7 +68,10 @@ DISTRO ?= "cedi"
 #  - 'package_rpm' for rpm style packages
 # E.g.: PACKAGE_CLASSES ?= "package_rpm package_deb package_ipk"
 # We default to rpm:
-PACKAGE_CLASSES ?= "package_rpm"
+PACKAGE_CLASSES ?= "package_ipk"
+
+PACKAGE_FEED_URIS ?= "https://pkg.li-pro.net/yocto/${DISTRO}"
+PACKAGE_FEED_BASE_PATHS ?= "ci release updates"
 
 #
 # SDK target architecture
