add structure for central minimal images
Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/meta-cedi/conf/bblayers.conf.sample
+++ b/meta-cedi/conf/bblayers.conf.sample
@@ -12,5 +12,6 @@ BBLAYERS = " \
   ${BSPDIR}/sources/poky/meta-poky \
   ${BSPDIR}/sources/poky/meta-yocto-bsp \
   \
+  ${BSPDIR}/sources/central/meta \
   ${BSPDIR}/sources/central/meta-cedi \
 "
