--- a/meta-cedi/conf/layer.conf
+++ b/meta-cedi/conf/layer.conf
@@ -15,5 +15,5 @@ LAYERSERIES_COMPAT_cedi = "gatesgarth dunfell zeus warrior"
 # cause compatibility issues with other layers
 LAYERVERSION_cedi = "1"
 
-LAYERDEPENDS_cedi += "yocto (>= 3)"
+LAYERDEPENDS_cedi += "central-core (>= 1)"
 REQUIRED_CEDI_BBLAYERS_CONF_VERSION = "1"
