enable and use OpenEmbedded multi-layer project
* meta-oe (a.k.a. openembedded-layer)
* meta-python
* meta-initramfs
* meta-filesystems (a.k.a. filesystems-layer)
* meta-networking (a.k.a networking-layer)
* meta-multimedia (a.k.a multimedia-layer)

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/meta-cedi/conf/bblayers.conf.sample
+++ b/meta-cedi/conf/bblayers.conf.sample
@@ -12,6 +12,13 @@ BBLAYERS = " \
   ${BSPDIR}/sources/poky/meta-poky \
   ${BSPDIR}/sources/poky/meta-yocto-bsp \
   \
+  ${BSPDIR}/sources/openembedded/meta-oe \
+  ${BSPDIR}/sources/openembedded/meta-python \
+  ${BSPDIR}/sources/openembedded/meta-initramfs \
+  ${BSPDIR}/sources/openembedded/meta-filesystems \
+  ${BSPDIR}/sources/openembedded/meta-networking \
+  ${BSPDIR}/sources/openembedded/meta-multimedia \
+  \
   ${BSPDIR}/sources/central/meta \
   ${BSPDIR}/sources/central/meta-cedi \
 "
