--- a/meta-cedi/conf/layer.conf
+++ b/meta-cedi/conf/layer.conf
@@ -15,5 +15,10 @@ LAYERSERIES_COMPAT_cedi = "gatesgarth dunfell zeus warrior"
 # cause compatibility issues with other layers
 LAYERVERSION_cedi = "1"
 
+LAYERDEPENDS_cedi += "meta-python"
+LAYERDEPENDS_cedi += "meta-initramfs"
+LAYERDEPENDS_cedi += "filesystems-layer"
+LAYERDEPENDS_cedi += "networking-layer"
+LAYERDEPENDS_cedi += "multimedia-layer"
 LAYERDEPENDS_cedi += "central-core (>= 1)"
 REQUIRED_CEDI_BBLAYERS_CONF_VERSION = "1"
