--- a/meta/conf/layer.conf
+++ b/meta/conf/layer.conf
@@ -16,6 +16,7 @@ LAYERSERIES_COMPAT_central-core = "gatesgarth dunfell zeus warrior"
 LAYERVERSION_central-core = "1"
 
 LAYERDEPENDS_central-core = "yocto (>= 3)"
+LAYERDEPENDS_central-core = "openembedded-layer (>= 1)"
 
 # Set a variable to get to the top of the metadata location
 CENTRALCOREBASE = '${@os.path.normpath("${LAYERDIR}/../")}'
