--- a/meta-cedi/conf/bblayers.conf.sample
+++ b/meta-cedi/conf/bblayers.conf.sample
@@ -19,6 +19,8 @@ BBLAYERS = " \
   ${BSPDIR}/sources/openembedded/meta-networking \
   ${BSPDIR}/sources/openembedded/meta-multimedia \
   \
+  ${BSPDIR}/sources/qt/meta-qt5 \
+  \
   ${BSPDIR}/sources/central/meta \
   ${BSPDIR}/sources/central/meta-cedi \
 "
