--- a/meta/conf/layer.conf
+++ b/meta/conf/layer.conf
@@ -17,6 +17,7 @@ LAYERVERSION_central-core = "1"
 
 LAYERDEPENDS_central-core = "yocto (>= 3)"
 LAYERDEPENDS_central-core = "openembedded-layer (>= 1)"
+LAYERDEPENDS_central-core = "qt5-layer (>= 1)"
 
 # Set a variable to get to the top of the metadata location
 CENTRALCOREBASE = '${@os.path.normpath("${LAYERDIR}/../")}'
