enable Yocto layer for MinGW based SDKs
* meta-mingw

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/meta-cedi/conf/bblayers.conf.sample
+++ b/meta-cedi/conf/bblayers.conf.sample
@@ -12,6 +12,8 @@ BBLAYERS = " \
   ${BSPDIR}/sources/poky/meta-poky \
   ${BSPDIR}/sources/poky/meta-yocto-bsp \
   \
+  ${BSPDIR}/sources/yocto/meta-mingw \
+  \
   ${BSPDIR}/sources/openembedded/meta-oe \
   ${BSPDIR}/sources/openembedded/meta-python \
   ${BSPDIR}/sources/openembedded/meta-initramfs \
