enable 'Build History' inclusion
Fixed by correct setup for BUILDHISTORY_DIR in local.conf.

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/meta-cedi/conf/local.conf.sample
+++ b/meta-cedi/conf/local.conf.sample
@@ -252,9 +252,9 @@ PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
 #
 # Add build history if INCLUDE_BUILD_HISTORY envar is set either in site.conf or the
 # shell environment
-### NOT YET: INHERIT += "${@'buildhistory' if d.getVar('INCLUDE_BUILD_HISTORY') == 'true' else ''}"
-### NOT YET: BUILDHISTORY_COMMIT = "${@'1' if d.getVar('INCLUDE_BUILD_HISTORY') == 'true' else ''}"
-### NOT YET: BUILDHISTORY_DIR = "${@'${TOPDIR}/buildhistory' if d.getVar('INCLUDE_BUILD_HISTORY') == 'true' else ''}"
+INHERIT += "${@'buildhistory' if d.getVar('INCLUDE_BUILD_HISTORY') == 'true' else ''}"
+BUILDHISTORY_COMMIT = "${@'1' if d.getVar('INCLUDE_BUILD_HISTORY') == 'true' else ''}"
+BUILDHISTORY_DIR ?= "${TOPDIR}/buildhistory"
 
 #
 # Hash Equivalence
