enable and use Li-Pro.Net BSP layer
* meta-lpn-bsp (a.k.a. lpn-bsp)

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/meta-cedi/conf/bblayers.conf.sample
+++ b/meta-cedi/conf/bblayers.conf.sample
@@ -25,4 +25,5 @@ BBLAYERS = " \
   \
   ${BSPDIR}/sources/central/meta \
   ${BSPDIR}/sources/central/meta-cedi \
+  ${BSPDIR}/sources/central/meta-lpn-bsp \
 "
