--- a/meta-cedi/conf/layer.conf
+++ b/meta-cedi/conf/layer.conf
@@ -16,6 +16,7 @@ LAYERSERIES_COMPAT_cedi = "gatesgarth dunfell zeus warrior"
 LAYERVERSION_cedi = "1"
 
 LAYERDEPENDS_cedi = "central-core (>= 1)"
+LAYERDEPENDS_cedi += "lpn-bsp (>= 1)"
 LAYERDEPENDS_cedi += "meta-python"
 LAYERDEPENDS_cedi += "meta-initramfs"
 LAYERDEPENDS_cedi += "filesystems-layer"
